keyvalues-parser/tests/snapshots/text_parser__parsed-base_multiple.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 121
expression: "PartialVdfDef::from(vdf.clone())"

---
PartialVdfDef(
  key: "Key",
  value: Obj(ObjDef({})),
  bases: [
    "one_base.res",
    "../another_base.vdf",
    "other\\path\\sep.pop",
  ],
)
