keyvalues-parser/tests/snapshots/text_parser__parsed-base_multiple_raw_strings.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 138
expression: "PartialVdfDef::from(vdf.clone())"

---
PartialVdfDef(
  key: "Some\\non\\escaped\\text",
  value: Obj(ObjDef({
    "Unquoted\\non\\escaped\\text": [
      Str("And\\some\\value"),
    ],
  })),
  bases: [
    "one_base.res",
    "../another_base.vdf",
    "other\\path\\sep.pop",
  ],
)
