keyvalues-parser/tests/snapshots/text_parser__parsed-compact.snap
---
source: keyvalues-parser/tests/text_parser.rs
expression: "VdfDef::from(vdf.clone())"
---
VdfDef {
    key: "foo",
    value: Obj(
        ObjDef(
            {
                "": [
                    Obj(
                        ObjDef(
                            {},
                        ),
                    ),
                ],
                "bar": [
                    Str(
                        "baz",
                    ),
                ],
            },
        ),
    ),
}
