keyvalues-parser/tests/snapshots/text_parser__parsed-null_byte.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 88
expression: "VdfDef::from(vdf.clone())"

---
VdfDef(
  key: "Key",
  value: Obj(ObjDef({})),
)
